--- a/package.json
+++ b/package.json
@@ -37,11 +37,11 @@
   "devDependencies": {
     "@commitlint/cli": "^20.1.0",
     "@commitlint/config-conventional": "^20.0.0",
-    "@storybook/nextjs": "10.0.8",
-    "@storybook/react": "^10.0.8",
     "@storybook/addon-a11y": "^10.0.8",
     "@storybook/addon-docs": "^10.0.8",
     "@storybook/addon-vitest": "^10.0.8",
+    "@storybook/nextjs": "10.0.8",
+    "@storybook/react": "^10.0.8",
     "@tailwindcss/postcss": "^4",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
@@ -67,6 +67,7 @@
     "prettier-plugin-tailwindcss": "^0.7.1",
     "storybook": "10.0.8",
     "tailwindcss": "^4",
+    "tsconfig-paths-webpack-plugin": "^4.2.0",
     "typescript": "^5",
     "vitest": "^4.0.10"
   }
