--- a/.storybook/tsconfig.json
+++ b/.storybook/tsconfig.json
@@ -4,7 +4,7 @@
     "module": "ESNext",
     "moduleResolution": "bundler",
     "paths": {
-      "@/*": ["../src/*"]
+      "@/*": ["src/*"]
     }
   },
   "include": ["../.storybook/**/*", "../src/**/*"]
