--- a/.storybook/tsconfig.json
+++ b/.storybook/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "module": "ESNext",
     "moduleResolution": "bundler",
+    "baseUrl": "../",
     "paths": {
       "@/*": ["src/*"]
     }
