:wrench: chore: Storybook TS config 설정

--- a/.storybook/tsconfig.json
+++ b/.storybook/tsconfig.json
@@ -5,7 +5,13 @@
     "moduleResolution": "bundler",
     "baseUrl": "../",
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": ["src/*"],
+      "@app/*": ["src/app/*"],
+      "@entities/*": ["src/entities/*"],
+      "@features/*": ["src/features/*"],
+      "@shared/*": ["src/shared/*"],
+      "@widgets/*": ["src/widgets/*"],
+      "@stories/*": ["src/stories/*"]
     }
   },
   "include": ["../.storybook/**/*", "../src/**/*"]
