feat: Testea 랜딩 페이지 프로토타입 생성 및 UI 개편 (Dark Mode, 2단 레이아웃)
- 메인 헤드라인(Hero)과 프로젝트 생성 폼을 분리하여 2단 레이아웃 적용 (Tailwind CSS 스타일 참고)
- 프로젝트 생성 폼을 오른쪽 영역에 배치하여 CTA 강조
- Private Mode 활성화 시 식별번호 입력 필드가 동적으로 나타나는 기능 구현
- Header에 Docs 링크 추가 및 Footer 정리
- Container, Checkbox, SEO 객체를 독립적인 실행을 위해 로컬 정의로 전환

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,11 @@
      * ────────────────────────────────────────────────────*/
     "paths": {
       "@/*": ["src/*"]
-    }
+    },
+    /* ─────────────────────────────────────────────────────
+     * JSX 트랜스폼 방식
+     * React 17+ 자동 JSX 변환 방식 → import React 생략 가능
+     * ────────────────────────────────────────────────────*/
+    "jsx": "react-jsx"
   }
 }
