refactor: main(lending) 페이지 내 폼 분리 및 디자인 시스템 일부 적용

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
    * - Next.js 클라이언트(app) / 서버(server) 환경을 분리할 수 있음
    * ────────────────────────────────────────────────────*/
   "references": [{ "path": "./tsconfig.app.json" }, { "path": "./tsconfig.server.json" }],
-
+  "esModuleInterop": true,
+  "allowSyntheticDefaultImports": true,
   "compilerOptions": {
     /* ─────────────────────────────────────────────────────
      * baseUrl
