Refactor: Lifecycle Status 로직 재정비
변경 내용
- LifecycleStatusEnum 변수를 공통 스키마로 이동하고 관련 파일의 중복 선언 제거
- `deletedAt` 필드를 `archivedAt`로 변경하고 관련 로직을 업데이트
- 테스트 및 Mock 데이터에서 관련 필드의 키 값을 변경 (e.g., status → progressStatus)
- `projectId`를 옵셔널 처리하여 빈 문자열로 초기화
- tsconfig.app.json에 신규 경로(app) 추가

변경 이유
Lifecycle 상태 관리의 일관성을 높이고 중복 정의된 타입을 재사용하도록 구조 최적화

영향 범위
- Test Run, Test Case, Test Suite, Milestone 등의 타입 정의 및 프론트엔드 로직
- 관련 테스트 파일 및 Mock 데이터

Todo
- Lifecycle 관련 추가 필드 검증 로직 구현

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -87,7 +87,7 @@
    * - src/../*: 앱 소스 전체
    * - .next/types/**: Next 빌드 시 생성되는 타입 정의
    * ────────────────────────────────────────────────────*/
-  "include": ["next-env.d.ts", "src/**/*", ".next/types/**/*.ts", ".next/dev/types/**/*.ts"],
+  "include": ["next-env.d.ts", "src/**/*", ".next/types/**/*.ts", ".next/dev/types/**/*.ts", "app/**/*.ts", "app/**/*.tsx", "vitest.config.ts"],
   /* ─────────────────────────────────────────────────────
    * 제외 폴더
    * 외부 라이브러리(node_modules)는 타입 검사에서 제외
