--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "lucide-react": "^0.561.0",
     "next": "16.0.10",
     "postgres": "^3.4.7",
+    "pretendard": "^1.3.9",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.68.0",
