--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "@next/third-parties": "^16.1.6",
+    "@sentry/nextjs": "10",
     "@supabase/supabase-js": "^2.87.3",
     "@tanstack/react-query": "^5.90.12",
     "@tanstack/react-query-devtools": "^5.91.1",
@@ -37,6 +38,7 @@
     "drizzle-kit": "^0.31.8",
     "drizzle-orm": "^0.45.1",
     "framer-motion": "^12.23.26",
+    "import-in-the-middle": "2.0.6",
     "lucide-react": "^0.561.0",
     "next": "16.0.10",
     "postgres": "^3.4.7",
@@ -47,6 +49,7 @@
     "react-markdown": "^10.1.0",
     "recharts": "^3.6.0",
     "remark-gfm": "^4.0.1",
+    "require-in-the-middle": "^8.0.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "uuid": "^13.0.0",
